<resources>
    <string name="app_name">SweetTemptation</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnRealizarPedido">Realizar Pedido</string>
    <string name="btnGuardarCambios">Guardar Cambios</string>
    <string name="pedidoTitulo">Mi Pedido</string>
    <string name="txtTotal">Total: $</string>
    <string name="txtSubtotal">Subtotal: $</string>
    <string name="txtIVA">IVA: 16%</string>
    <string name="estadisticasProductoTitulo">Estadísticas</string>
    <string name="headerProducto">Producto</string>
    <string name="headerVentas">No. Ventas</string>
    <string name="txtSinProductos">No hay productos seleccionados.\nEmpieza seleccionando un producto</string>
    <string name="btnProductos">Productos</string>
    <string name="txtRangoFechas">Rango seleccionado: </string>
    <string name="MasVendidosHeader">Más vendidos</string>
    <string name="MenosVendidosHeader">Menos vendidos</string>
    <string name="seleccionarEstadisticasTitulo">Seleccionar Estadisticas</string>

</resources>