<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/icon_regresar"
            android:text=""
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadisticasProductoTitulo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtRangoFechas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRangoFechas"
        />

    <Spinner
        android:id="@+id/cbRangoFechas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtTituloMasVendidos"
            android:text="@string/MasVendidosHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            />
        <TextView
            android:id="@+id/txtTituloMenosVendidos"
            android:text="@string/MenosVendidosHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <!-- Tabla 1 -->
        <TableLayout
            android:id="@+id/tblVentasAltas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            android:paddingEnd="6dp">

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerProducto"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerVentas"
                    android:textStyle="bold"
                    android:padding="8dp" />
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>
        </TableLayout>

        <!-- Tabla 2 -->
        <TableLayout
            android:id="@+id/tblVentasBajas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            android:paddingStart="6dp">

            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerProducto"
                    android:textStyle="bold"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headerVentas"
                    android:textStyle="bold"
                    android:padding="8dp" />
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>

            <TableRow>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="—" android:padding="8dp"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbProgreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cbProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tblVentasBajas"
        app:layout_constraintVertical_bias="0.75"
        android:layout_gravity="center"
        />

    <Spinner
        android:id="@+id/cbProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1" />

</LinearLayout>
